fix(knowledge-book-meta): Integrate data components